--- a/crime/frontend/styles/main.css
+++ b/crime/frontend/styles/main.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: #e7b0cc;
     cursor: initial;
@@ -9,6 +11,7 @@ body {
     background-color :#edddf6;
     width: auto;
     height: auto;
+    text-align: center;
     margin: 50px 50px 50px 50px;
    
 }
@@ -19,6 +22,7 @@ body {
     justify-content: center;
     width: auto;
     height: auto;
+    text-align: center;
     margin: 50px 50px 50px 50px;
    
 }
@@ -28,6 +32,6 @@ body {
     background-color :#edddf6;
     width: auto;
     height: auto;
-    align-items: center;
+    text-align: center;
     margin: 50px 50px 50px 50px; 
 }
