--- a/crime/frontend/styles/main.css
+++ b/crime/frontend/styles/main.css
@@ -13,7 +13,7 @@ body {
     width: 33%;
 	
 }
-.btn2{
+.modal-button{
     background: #822659;
     color: white;
     font-size: 100%;
@@ -23,13 +23,50 @@ body {
 }
 
 
+
+.modal-bg{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color:rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s;
+}
+
+.bg-active {
+    visibility: visible;
+    opacity:1; 
+
+}
+
+.modal {
+    font-family: 'Monrserrat', sans-serif;
+    background-color: white;
+    width: 30%;
+    height: 30%;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+
 #cases-container {
     border: 1px solid black;
     background-color :#f8a1d1;
     width: auto;
     height: auto;
     text-align: center;
+    font-family: 'Monrserrat', sans-serif;
     margin: 50px 50px 50px 50px;
+    
    
 }
 
@@ -40,6 +77,7 @@ body {
     width: auto;
     height: auto;
     text-align: center;
+    font-family: 'Monrserrat', sans-serif;
     margin: 50px 50px 50px 50px;
    
 }
@@ -50,6 +88,7 @@ body {
     width: auto;
     height: auto;
     text-align: center;
+    font-family: 'Monrserrat', sans-serif;
     margin: 50px 50px 50px 50px; 
 }
 
