--- a/crime/frontend/styles/main.css
+++ b/crime/frontend/styles/main.css
@@ -49,7 +49,7 @@ body {
 .modal {
     font-family: 'Monrserrat', sans-serif;
     background-color: white;
-    width: auto;
+    width: 30%;
     height: auto;
     display:flex;
     justify-content: space-around;
